fixed help button overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,8 +33,8 @@ a {
     text-decoration: none;
     font-size: 42px;
     color: red;
-    margin: 20vh 0;
-    padding: 10vh 0;
+    margin: 30vh 0;
+    padding: 0;
     font-weight: bolder;
 }
 
